# native-db

./: .gitignore  README.md  pyproject.toml
src/native_db/: __init__.py  _bloom.py  _ctx.py  _log.py  _testing.py  _utils.py  dtypes.py  errors.py  schema.py  structs.py  transform.py
src/native_db/lowlevel/: __init__.py  bloom.py  diskops.py  executor.py
src/native_db/table/: __init__.py  _layout.py  builder.py  writer.py
tests/: bench_bloom.py  conftest.py  test_bloom.py  test_table.py  test_writer.py  test_writer_keyword.py  test_writer_market.py
