[project]
name = 'native-db'
version = '0.1.0'
description = 'Add your description here'
readme = 'README.md'
authors = [
    { name = 'Guillermo Rodriguez', email = 'guilledk@protonmail.com' }
]
requires-python = '>=3.11'
dependencies = [
    'anyio[trio]>=4.10.0',
    'colorlog>=6.9.0',
    'hotbaud',
    'msgspec>=0.19.0',
    'polars>=1.32.3',
    'pyarrow>=21.0.0',
    'requests>=2.32.5',
    'xxhash>=3.5.0',
]

[build-system]
requires = ['uv_build>=0.8.2,<0.9.0']
build-backend = 'uv_build'

[dependency-groups]
dev = [
    'pdbp>=1.7.1',
    'pytest>=8.4.1',
    'pytest-anyio>=0.0.0',
    'pytest-benchmark>=5.1.0',
]

[tool.pytest.ini_options]
addopts = [
  '--show-capture=no',
]

[tool.ruff]
line-length = 80
exclude = [
    '.git',
    '.ruff_cache',
    '.venv',
]

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'
line-ending = 'lf'
preview = true
docstring-code-format = true

[tool.ruff.lint]
select = ['Q']  # flake8-quotes rules
ignore = ['Q002', 'D300']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'

[tool.uv.sources.hotbaud]
git = 'https://github.com/guilledk/hotbaud.git'
rev = '59f48e4fd20776b79978a582ca2bfe19f6313a32'

# [tool.uv.sources.hotbaud]
# path = '../hotbaud'
# editable = true
